[package]
name = "blebee"
version = "0.1.0"
edition = "2021"

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
lazy_static = {version = "1.0", features = ["spin_no_std"]}
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
